--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -16,7 +16,7 @@
 .blog-1,
 .blog-2,
 .blog-3 {
-    border: 1px solid rgb(200, 193, 193);
+    border: 1px solid rgba(234, 94, 94, 0.964);
     padding: 40px;
     border-radius: 10px;
     margin-bottom: 50px;
